@@ -30,6 +30,14 @@
 
 #include <stdint.h>
 
+/* On ARM some versions of GCC don't pack structures by default so sizeof(UChar)
+   will end up being != 2 which causes crashes since the code depends on that. */
+#if COMPILER(GCC) && PLATFORM(ARM)
+#define PACK_STRUCT __attribute__((packed))
+#else
+#define PACK_STRUCT
+#endif
+
 /**
  * @internal
  */
@@ -84,7 +92,7 @@ namespace KJS {
     unsigned short unicode() const { return uc; }
 
     unsigned short uc;
-  };
+  } PACK_STRUCT;
 
   inline UChar::UChar() { }
   inline UChar::UChar(unsigned char h , unsigned char l) : uc(h << 8 | l) { }
