@@ -155,6 +155,11 @@ while (0)
 
 #endif
 
+/* COMPILE_ASSERT */
+#ifndef COMPILE_ASSERT
+#define COMPILE_ASSERT(exp, name) typedef int dummy##name [(exp) ? 1 : -1];
+#endif
+
 /* FATAL */
 
 #if FATAL_DISABLED
