@@ -1,3 +1,13 @@
+2007-02-17  Krzysztof Kowalczyk  <kkowalczyk@gmail.com>
+
+        Reviewed by Adam Roben.
+
+        Fix crashes on ARM due to different struct packing. Based on a patch
+        by Mike Emmel.
+        * kjs/ustring.cpp: compile-time assert to make sure sizeof(UChar) == 2
+        * kjs/ustring.h: pack UChar struct to ensure that sizeof(UChar) == 2
+        * wtf/Assertions.h: add COMPILE_ASSERT macro for compile-time assertions
+
 2007-02-16  George Staikos  <staikos@kde.org>
 
         Reviewed by Maciej.
